# centrifuge

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
aldehyde-rs/: .gitignore  Cargo.toml
aldehyde-rs/aldehyde-cal/: Cargo.toml
aldehyde-rs/aldehyde-cal/src/: alarm.rs  attendee.rs  calendar.rs  event.rs  freebusy.rs  lib.rs  recurrence.rs  time.rs  todo.rs
aldehyde-rs/aldehyde-cal/tests/: integration.rs
aldehyde-rs/aldehyde-core/: Cargo.toml
aldehyde-rs/aldehyde-core/src/: lib.rs  photo.rs
aldehyde-rs/aldehyde-inventory/: Cargo.toml
aldehyde-rs/aldehyde-inventory/src/: event.rs  inventory.rs  item.rs  lib.rs  placement.rs
aldehyde-rs/aldehyde-inventory/tests/: integration.rs
polyepoxide-core/: Cargo.toml
polyepoxide-core/src/: async_store.rs  bond.rs  cell.rs  key.rs  lib.rs  oxide.rs  serde_helpers.rs  solvent.rs  store.rs  sync.rs
polyepoxide-core/tests/: integration.rs
polyepoxide-derive/: Cargo.toml
polyepoxide-derive/src/: lib.rs  schema.rs
polyepoxide-libp2p/: Cargo.toml
polyepoxide-libp2p/src/: codec.rs  lib.rs  protocol.rs  remote_store.rs
polyepoxide-rocks/: Cargo.toml
polyepoxide-rs/: Cargo.toml
polyepoxide-rs/polyepoxide-core/: Cargo.toml
polyepoxide-rs/polyepoxide-core/src/: async_store.rs  bond.rs  cell.rs  lib.rs  oxide.rs  schema.rs  serde_helpers.rs  solvent.rs  store.rs  sync.rs  traverse.rs
polyepoxide-rs/polyepoxide-core/tests/: integration.rs
polyepoxide-rs/polyepoxide-derive/src/: schema.rs
polyepoxide-rs/polyepoxide-fjall/: Cargo.toml
polyepoxide-rs/polyepoxide-fjall/src/: lib.rs
polyepoxide-rs/polyepoxide-libp2p/: Cargo.toml
polyepoxide-rs/polyepoxide-libp2p/src/: codec.rs  handler.rs  lib.rs  protocol.rs  remote_store.rs
polyepoxide-rs/polyepoxide-libp2p/tests/: sync_test.rs
polyepoxide-rs/polyepoxide-llm/: Cargo.toml
polyepoxide-rs/polyepoxide-llm/src/: content.rs  lib.rs  message.rs  metadata.rs  tool.rs
polyepoxide-rs/polyepoxide-rocks/: Cargo.toml
polyepoxide-rs/polyepoxide-rocks/src/: lib.rs
polyepoxide-rs/polyepoxide-tool/: Cargo.toml
polyepoxide-rs/polyepoxide-tool/src/: app.rs  export.rs  main.rs  store.rs  tree.rs  ui.rs
silane-rs/: Cargo.toml
silane-rs/silane-openrouter/: Cargo.toml
silane-rs/silane-openrouter/src/: client.rs  convert.rs  error.rs  lib.rs  types.rs
silane-rs/silane-tool/: Cargo.toml
silane-rs/silane-tool/src/: config.rs  error.rs  main.rs  store.rs
silane-rs/silane-tool/src/chat/: app.rs  input.rs  mod.rs  ui.rs
