[package]
name = "polyepoxide-core"
version = "0.1.0"
edition = "2024"

[dependencies]
cid = "0.11"
ipld-core = "0.4"
multihash-codetable = { version = "0.1", features = ["blake3"] }
serde_ipld_dagcbor = "0.6"
indexmap = { version = "2.12.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
polyepoxide-derive = { path = "../polyepoxide-derive", optional = true }

[features]
default = ["derive"]
derive = ["polyepoxide-derive"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
