[package]
name = "polyepoxide-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "px"
path = "src/main.rs"

[dependencies]
# Core polyepoxide crates
polyepoxide-core = { path = "../polyepoxide-core", features = ["derive"] }
polyepoxide-fjall = { path = "../polyepoxide-fjall" }
polyepoxide-rocks = { path = "../polyepoxide-rocks" }

# IPLD/CID
cid = "0.11"
ipld-core = "0.4"
serde_ipld_dagcbor = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"
tui-tree-widget = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.22"

# Error handling
thiserror = "2.0"

# Unicode support
unicode-segmentation = "1.12"
