[package]
name = "silane-tool"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sih"
path = "src/main.rs"

[features]
default = ["chat"]
chat = ["dep:ratatui", "dep:crossterm"]

[dependencies]
polyepoxide-core = { path = "../../polyepoxide-rs/polyepoxide-core" }
polyepoxide-llm = { path = "../../polyepoxide-rs/polyepoxide-llm" }
polyepoxide-fjall = { path = "../../polyepoxide-rs/polyepoxide-fjall" }
polyepoxide-rocks = { path = "../../polyepoxide-rs/polyepoxide-rocks" }
silane-openrouter = { path = "../silane-openrouter" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
cid = "0.11"
toml = "0.8"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }

# TUI dependencies (optional, behind "chat" feature)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
